Changed welcome message

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+        <p>The belly button can be home to a wide variety of OTU (operational taxonomic units)! The number and type of bacterial colonies present, of course, depend on a variety of factors including wash frequency, etc. This dashboard utilizes JavaScript, Plotly, and D3 selection tools to visualize the wide degree of biodiversity of our navels. Use the interactive charts below to explore the dataset!</p>
       </div>
     </div>
     <div class="row">
@@ -32,10 +32,10 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div id="bar"></div>
+        <div id="gauge"></div>
       </div>
       <div class="col-md-5">
-        <div id="gauge"></div>
+        <div id="bar"></div>
       </div>
     </div>
     <div class="row">
